# auto-diff-python

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  pyproject.toml  requirements.txt
.github/workflows/: wheel.yml
CMake/: stubgen.cmake
docs/: applications.md  array.md  expressions.md  functions.md  scalar.md
examples/: array_simple.py  scalar_simple.py
src/: CMakeLists.txt  array.cpp  common.cpp  common.hpp  scalar.cpp
src-python/autodiff/: __init__.py  array.py  scalar.py
src/include/AutoDiff/Python/: Evaluator.hpp  Expression.hpp  ExpressionBinding.hpp  Operation.hpp  Variable.hpp
tests/: test_array.py  test_scalar.py
